# phoenix

./: .gitignore  CMakeLists.txt  README.md
source/: input.hpp  library.hpp  log.hpp  number.hpp  phoenix.hpp  plugin.hpp  random.hpp  std.hpp  string.hpp
source/engine/: component.hpp  coordinator.hpp  entity.hpp  system.hpp
source/experimental/: file.hpp  string_hash.hpp  unique_void_ptr.hpp
